@@ -17,6 +17,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
@@ -57,7 +58,7 @@ public class AuthService {
 
         final UserDetailsImpl userDetails = (UserDetailsImpl) authentication.getPrincipal();
         final List<String> roles = userDetails.getAuthorities().stream()
-                .map(item -> item.getAuthority())
+                .map(GrantedAuthority::getAuthority)
                 .toList();
         return JwtResponse.builder().token(jwt).id(userDetails.getId()).username(userDetails.getUsername()).roles(roles).build();
     }
@@ -75,7 +76,7 @@ public class AuthService {
         final User user = userRequestMapper.toEntity(request);
         user.setPassword(encoder.encode(request.getPassword().trim()));
         // add default role to the user
-        user.setRoles(new HashSet<>(Arrays.asList(new Role(1L, RoleType.ROLE_USER))));
+        user.setRoles(new HashSet<>(List.of(new Role(1L, RoleType.ROLE_USER))));
         userRepository.save(user);
         log.info(CREATED_USER);
         return CommandResponse.builder().id(user.getId()).build();
